# Autoclicker

./: CMakeLists.txt  README.md
src/Autoclicker/: Autoclicker.cpp  Autoclicker.h  main.cpp
